feat: add header component in home page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,4 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto Mono', sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  min-height: 100vh;
 }
