--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,6 +3,7 @@
   --gray: #121212;
   --gray-accent: #2a2a2a;
   --white: #fff;
+  --white--accent: #f5f5f7;
   --primary: #0071e3;
   --accent: #0077ed;
 }
