--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto Mono', sans-serif;
 }
 
 html {
   font-size: 62.5%;
+  font-family: 'Roboto Mono', sans-serif;
+  color: var(--white);
 }
 
 body {
