--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -14,6 +14,8 @@
   background-size: cover;
   width: 100vw;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 4fr 1fr;
 }
 
 #hello header {
@@ -34,4 +36,25 @@
   display: flex;
   height: 100%;
   gap: .8rem;
+}
+
+#hello main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+#hello main h1 {
+  font-size: 4.8rem;
+  line-height: 6.4rem;
+  font-weight: 700;
+  width: 60%;
+}
+
+#hello main p {
+  color: var(--white-accent);
+  font-size: 1.6rem;
+  line-height: 3.2rem;
+  width: 50%;
 }
