fix: mudar algumas coisas como lugar de pastas e também consertar a responsividade da tela inicial

--- a/src/styles/components/back-to-top.css
+++ b/src/styles/components/back-to-top.css
@@ -1,8 +1,5 @@
-@import url(/src/styles/variables.css);
+@import url(../variables.css);
 
-html {
-  scroll-behavior: smooth;
-}
 #backToTop {
   position: fixed;
   bottom: 2.2rem;
