--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -1,6 +1,7 @@
 @import url(../components/wrapper.css);
 @import url(../components/nav-link.css);
 @import url(../animations/showHide.css);
+@import url(../components/back-to-top.css);
 
 #homepage {
   width: 100vw;
@@ -93,4 +94,22 @@
   transform: rotate(45deg);
   top: -83%;
   right: 28.5%;
+}
+
+@media (max-width: 960px) {
+  #hello header {
+    gap: 1.6rem;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  #hello header {
+    gap: 1.6rem;
+    flex-direction: column;
+  }
+
+  #hello header nav {
+    display: none;
+  }
 }
