--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -101,6 +101,12 @@
     gap: 1.6rem;
     flex-direction: column;
   }
+
+  #hello main h1, #hello main p {
+    text-align: center;
+    width: 80%;
+    margin: auto;
+  }
 }
 
 @media (max-width: 768px) {
@@ -111,5 +117,11 @@
 
   #hello header nav {
     display: none;
+  }
+
+  #hello main h1, #hello main p {
+    width: 90%;
+    margin: auto;
+    text-align: center;
   }
 }
