--- a/src/styles/components/responsive-menu.css
+++ b/src/styles/components/responsive-menu.css
@@ -11,3 +11,11 @@
   backdrop-filter: blur(3.2rem);
   box-shadow: 0 0 10rem rgba(255, 255, 255, .01);
 }
+
+.visible {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
