--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,7 +4,7 @@
   --gray-accent: #2a2a2a;
   --white: #fff;
   --white-accent: #f5f5f7;
-  --primary: #0071e3;
-  --accent: #0077ed;
-  --gradient: linear-gradient(45deg, var(--primary), var(--accent));
+  --primary: #0080ff;
+  --accent: #004080;
+  --gradient: linear-gradient(135deg, var(--primary), var(--accent));
 }
