feat: add crew members section

--- a/src/styles/pages/home/home.css
+++ b/src/styles/pages/home/home.css
@@ -3,12 +3,14 @@
 @import url(../../components/back-to-top.css);
 @import url(../../components/responsive-menu.css);
 @import url(../../components/animated-title.css);
+@import url(../../components/card.css);
 
 @import url(../../animations/waveColor.css);
 @import url(../../animations/showHide.css);
 
 @import url(./sections/hello.css);
 @import url(./sections/about.css);
+@import url(./sections/crew-members.css);
 
 #homepage {
   width: 100vw;
