--- a/src/styles/components/responsive-menu.css
+++ b/src/styles/components/responsive-menu.css
@@ -7,9 +7,7 @@
   margin-top: 120px;
   flex-direction: column;
   gap: .8rem;
-  background-color: rgba(255, 255, 255, .01);
-  backdrop-filter: blur(3.2rem);
-  box-shadow: 0 0 10rem rgba(255, 255, 255, .01);
+  background: var(--black);
 }
 
 .visible {
