--- a/src/styles/components/animated-title.css
+++ b/src/styles/components/animated-title.css
@@ -7,14 +7,15 @@
 
 .animated-title::after {
   content: '.';
-  height: 80%;
+  height: 100%;
   font-size: 2.4rem;
   position: absolute;
   top: .2rem;
   color: transparent;
-  margin-left: .8rem;
+  margin-left: .0rem;
   background: var(--white-accent);
   animation-name: showHide;
   animation-duration: 1s;
   animation-iteration-count: infinite;
+  width: .3rem;
 }
