--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,5 +16,11 @@ html {
 
 body {
   min-height: 100vh;
-  overflow: overlay;
+  overflow-x: hidden;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+
 }
