--- a/src/styles/pages/home/sections/crew-members.css
+++ b/src/styles/pages/home/sections/crew-members.css
@@ -27,4 +27,19 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
+
+  #crew-members .card {
+    transition: .2s;
+    animation-name: goTopAndBottom;
+    animation-duration: 5.6s;
+    animation-iteration-count: infinite;
+  }
+  
+  #crew-members .card:nth-child(2) {
+    animation-delay: .3s;
+  }
+  
+  #crew-members .card:nth-child(3) {
+    animation-delay: .7s;
+  }
 }
