--- a/src/styles/components/animated-title.css
+++ b/src/styles/components/animated-title.css
@@ -10,9 +10,8 @@
   height: 100%;
   font-size: 2.4rem;
   position: absolute;
-  top: .2rem;
+  top: 0;
   color: transparent;
-  margin-left: .0rem;
   background: var(--white-accent);
   animation-name: showHide;
   animation-duration: 1s;
