--- a/src/styles/pages/home/sections/projects.css
+++ b/src/styles/pages/home/sections/projects.css
@@ -2,50 +2,14 @@
   padding: 4.8rem 0;
 }
 
-#projects main {
+#projects main section {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
 }
 
-#projects main div {
-  border: 0;
-  border-radius: .32rem;
-  overflow: hidden;
-  width: 100%;
-  height: 30rem;
-  position: relative;
-  cursor: pointer;
-}
-
-#projects main div img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-#projects main div span {
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.72);
-}
-
-#projects main div span:hover {
-  
-}
-
-#projects main div span strong {
-  font-size: 2.4rem;
-}
-
 @media (min-width: 769px) {
-  #projects main {
+  #projects main section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
