--- a/src/styles/pages/home/sections/projects.css
+++ b/src/styles/pages/home/sections/projects.css
@@ -2,10 +2,24 @@
   padding: 4.8rem 0;
 }
 
+#projects main iframe {
+  width: 100%;
+  aspect-ratio: 16/9;
+  margin-bottom: 4.8rem;
+}
+
 #projects main section {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+}
+
+#projects main > h2 {
+  margin-bottom: 1.6rem;
+}
+
+#projects main > a {
+  margin-bottom: 4.8rem;
 }
 
 @media (min-width: 769px) {
