feat: add projects and learn with us section

--- a/src/styles/pages/home/home.css
+++ b/src/styles/pages/home/home.css
@@ -16,6 +16,7 @@
 @import url(./sections/about.css);
 @import url(./sections/crew-members.css);
 @import url(./sections/projects.css);
+@import url(./sections/learn-with-us.css);
 
 #homepage {
   width: 100vw;
