--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -1,30 +1,34 @@
-@import url(/src/styles/components/nav-link.css);
-@import url(../../../src/styles/components/wrapper.css);
-@import url(../../../src/styles/components/wrapper.css/nav-link);
-@import url(/src/styles/components/section-subtitle.css);
-@import url(/src/styles/components/section-title.css);
+@import url(../components/nav-link.css);
+@import url(../components/nav-link.css);
+@import url(../components/wrapper.css);
+@import url(../components/section-subtitle.css);
+@import url(../components/section-title.css);
 
-h2 {
-  font-size: 3.2rem;
-  line-height: 4rem;
-  margin-bottom: 2.4rem;
+#project-02 {
+  margin: 1.6rem 0;
 }
 
-p {
+#project-02 section p {
   font-size: 1.6rem;
-}
-.img-projects {
-  width: 100%;
-  margin-block: 5rem;
+  line-height: 3.2rem;
+  margin-top: 1.6rem;
 }
 
-pre {
+#project-02 section img {
+  width: 100%;
+  border: 0;
+  border-radius: .4rem;
+  margin: 1.6rem 0;
+}
+
+#project-02 pre {
   font-size: 1.6rem;
   border: 0;
   border-radius: .4rem;
   background-color: rgba(255, 255, 255, 0.2);
-  padding: 3.2rem;
+  padding: 7.2rem 0; 
 }
-header:nth-child(1) a {
-  width: 18%;
+
+#project-02 > header .nav-link {
+  width: 16rem;
 }
