feat: add content for bridge component

--- a/src/styles/pages/learn-with-us.css
+++ b/src/styles/pages/learn-with-us.css
@@ -1,6 +1,7 @@
 @import url(../components/nav-link.css);
 @import url(../components/wrapper.css);
 @import url(../components/section-title.css);
+@import url(../components/section-subtitle.css);
 
 #learn-with-us {
   margin: 1.6rem 0;
@@ -16,26 +17,34 @@
   gap: 2.4rem;
 }
 
-#learn-with-us main div {
+#learn-with-us main > div {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
 }
 
-#learn-with-us main div img {
+#learn-with-us main > div img {
   width: 100%;
   border: 0;
   border-radius: .4rem;
 }
 
-#learn-with-us main div p {
+#learn-with-us main > div p {
   font-size: 1.6rem;
   line-height: 3.2rem;
 }
 
+#learn-with-us main > div p strong {
+  color: var(--primary);
+}
+
+#learn-with-us main > div p:first-child {
+  margin-bottom: 1.6rem;
+}
+
 @media (min-width: 961px) {
-  #learn-with-us main div {
+  #learn-with-us main > div {
     display: grid;
     gap: 3.2rem;
     grid-template-columns: repeat(2, 1fr);
