--- a/src/styles/components/animated-title.css
+++ b/src/styles/components/animated-title.css
@@ -1,3 +1,5 @@
+/* estilização do cursor piscando */
+
 .animated-title {
   font-size: 4rem;
   color: var(--white);
@@ -16,5 +18,5 @@
   animation-name: showHide;
   animation-duration: 1s;
   animation-iteration-count: infinite;
-  width: .3rem;
+  width: 0.3rem;
 }
