--- a/src/styles/components/section-subtitle.css
+++ b/src/styles/components/section-subtitle.css
@@ -1,5 +1,7 @@
+/* estilização dos sub-títulos da pagina */
+
 .section-subtitle {
-  font-size: 3.2rem;
+  font-size: 2.8rem;
   line-height: 4rem;
   margin-bottom: .8rem;
 }
