--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,10 +8,13 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Roboto Mono', sans-serif;
   color: var(--white);
   background-color: var(--black);
   scroll-behavior: smooth;
+}
+
+html, button, input {
+  font-family: 'Roboto Mono', sans-serif;
 }
 
 body {
