--- a/src/styles/pages/home/sections/learn-with-us.css
+++ b/src/styles/pages/home/sections/learn-with-us.css
@@ -6,6 +6,16 @@
   margin-bottom: 1.6rem;
 }
 
+#learn-with-us main > h2:nth-child(5) {
+  animation-name: togglePrimaryAndBasic;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+#learn-with-us main a + h2 {
+  margin-top: 3.2rem;
+}
+
 #learn-with-us main section {
   margin-bottom: 3.2rem;
   display: flex;
