feat: add more intuitive navigation between pages

--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -4,6 +4,7 @@
 @import url(../components/wrapper.css);
 @import url(../components/section-subtitle.css);
 @import url(../components/section-title.css);
+@import url(../components/page-anchor.css);
 
 /* estilização da parte dos projetos */
 
