--- a/src/styles/pages/quiz/quiz.css
+++ b/src/styles/pages/quiz/quiz.css
@@ -3,6 +3,7 @@
 @import url(../../components/section-title.css);
 @import url(../../components/section-subtitle.css);
 @import url(../../components/input-group.css);
+@import url(../../components/page-anchor.css);
 
 @import url(./section/questions.css);
 
